--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
 
 
-  <!-- <script src="quickSort.js"></script> -->
-  <!-- <script src="bubble.js"></script> -->
+  <script src="quickSort.js"></script>
+  <script src="bubble.js"></script>
   <script src="selection.js"></script>
 </body>
 
